# store_rec_service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config_template.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  integration_tests.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.sh  setup_config.py  test_api.py
.github/workflows/: tests.yml
app/: ai_client.py  ai_models.py  ai_recommender.py  config.py  exceptions.py  logger.py  main.py  models.py  monitoring.py  recommender.py  security.py  validation.py
data/: generic_dataset.csv
ml_models/: content_model.pkl
monitoring/: alerts.yml  prometheus.yml
notebooks/: 1_data_exploration_and_model_training.ipynb
scripts/: security_audit.py
tests/: conftest.py  test_ai_client.py  test_ai_models.py  test_ai_recommender.py  test_api.py  test_basic.py  test_recommender.py
