[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "store_rec_service"
version = "0.1.0"
description = "A product recommendation service API using FastAPI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.23.2",
    "pydantic>=2.4.2",
    "scikit-learn>=1.3.2",
    "pandas>=2.1.1",
    "numpy>=1.26.0",
    "joblib>=1.3.2",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"] # Standard + isort + pyupgrade

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
